--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -658,8 +658,6 @@ footer a:hover {
 
 @media (max-width: 576px) {
     .navbar{
-        /* background-color: rgba(15, 15, 15, 0.612) !important; */
-        /* background-color: rgba(4, 4, 92, 0.664) !important; */
         width: 100%;
         z-index: 10;
     }
@@ -679,27 +677,24 @@ footer a:hover {
     .hero {
         display: none;
     }
-    /* .custom-shape-divider-bottom-1701560545 .shape-fill {
-        fill: rgb(4, 4, 92) !important;
-    } */
-
     /*bienvenido*/
     .main{
         background-color: #000;
+        min-height: 1050px;
+        padding-top: 30px !important;
     }
     .main-cont {
         text-align: center;
-        margin-bottom: -50px;
     }
     .main-img{
         width: 65%;
     }
     .main img {
         text-align: center;
-        margin: -50px auto;
+        margin-top: -40px;
     }
     .main-text {
-        padding: 0 15px;
+        padding: 20px !important;
     }
     .text-alianza {
         display: none;
@@ -710,15 +705,14 @@ footer a:hover {
         text-align: center !important;
         margin: 0 auto;
     }
-    .info h3 {
-        font-size: 1.8rem;
-        text-align: center !important;
-        margin: 0 auto;
-    }
-    .info .btn-info {
+    .info .info-text-btn{
         text-align: center !important;
         margin: 0 auto;
         padding-bottom: 10px;
+    }
+    .info h3 {
+        font-size: 1.8rem;
+        padding-bottom: 15px;
     }
     .box {
         width: 80%;
